Fix spacing and width issues

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -31,9 +31,9 @@
   // Replace with corresponding template values
   @container-width: 1400px;
 
-  @spacing__first--desktop: 40px;
-  @spacing__first--tablet:  30px;
-  @spacing__first--mobile:  20px;
+  @spacing__first--desktop: 0px;
+  @spacing__first--tablet:  0px;
+  @spacing__first--mobile:  0px;
 
   @spacing--other: 30px;
 
@@ -50,7 +50,7 @@
 
   .style--light, .style--dark, .style--accent, .style--background-image {
     .row__container {
-      width: 90%;
+      width: 90% !important;
     }
   }
 
